<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="430dp">

                <ImageView
                    android:id="@+id/picMain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/backgrounds/scenic"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/back_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/back"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/titleBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/back"
                        android:textColor="@color/white" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/picAddLover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:layout_margin="18dp"
                    app:srcCompat="@drawable/favorite_white" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cream_top_corner_bg"
                android:orientation="vertical"
                android:padding="16dp"
                android:translationY="-50dp">

                <TextView
                    android:id="@+id/titleCoffee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/darkBrown"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/titleCoffeeSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee_size"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/darkBrown"
                    android:layout_marginTop="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="16dp"
                    android:background="@drawable/orange_bg"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/titleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/small"
                        android:textColor="@color/darkBrown"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/titleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/medium"
                        android:textColor="@color/darkBrown"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/titleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/large"
                        android:textColor="@color/darkBrown"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/titleQty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/qty"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/darkBrown" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="90dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/dark_brown_bg">

                        <TextView
                            android:id="@+id/titleMinus"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:gravity="center"
                            android:text="-"
                            android:textSize="21sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <TextView
                            android:id="@+id/titleQuantity"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:gravity="center"
                            android:text="1"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@id/titleMinus"
                            app:layout_constraintEnd_toStartOf="@id/titlePlus"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <TextView
                            android:id="@+id/titlePlus"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:gravity="center"
                            android:text="+"
                            android:textSize="21sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/titleStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/darkBrown"
                        android:textStyle="bold"
                        android:layout_marginEnd="8dp" />

                    <ImageView
                        android:id="@+id/imageViewStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/star" />
                </LinearLayout>

                <TextView
                    android:id="@+id/titleDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/darkBrown"
                    android:layout_marginTop="16dp" />

                <!-- New detailed description -->
                <TextView
                    android:id="@+id/extraDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Textview"
                    android:textSize="15sp"
                    android:textColor="@color/darkBrown"
                    android:layout_marginTop="8dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/brown_full_corner_bg"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/titleAddToCart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="@string/add_to_cart"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="1dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="24dp"
                        android:background="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/titleSubTotalPrice"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:id="@+id/titleSubTotalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:text="$0"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>